// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should render a content hint if given 1`] = `
<div
  class="form-group"
>
  <div
    class="field-wrapper"
  >
    <label
      for="foo"
    >
      Test textarea
    </label>
    <textarea
      aria-describedby="bar"
      id="foo"
    />
  </div>
  <div
    class="info-wrapper"
  >
    <span
      class="icon"
    />
    <span
      id="bar"
    >
      Content hint test
    </span>
  </div>
</div>
`;

exports[`TextArea should render a textarea and label only 1`] = `
<div
  class="form-group"
>
  <div
    class="field-wrapper"
  >
    <label
      for="foo"
    >
      Test textarea
    </label>
    <textarea
      id="foo"
    />
  </div>
</div>
`;

exports[`TextArea should render an error text when invalid 1`] = `
<div
  class="form-group"
>
  <div
    class="field-wrapper"
  >
    <label
      for="foo"
    >
      Test textarea
    </label>
    <textarea
      aria-describedby="bar"
      class="has-error"
      id="foo"
    />
  </div>
  <div
    class="error-wrapper"
  >
    <span
      class="icon"
    />
    <span
      id="bar"
    >
      Test error
    </span>
  </div>
</div>
`;
